# Strategy-Card-Game-AI-Competition

./: .gitignore  DOCUMENTATION.md  GAME-RULES.md  README.md
Engine/: Action.nim  Cards.nim  Config.nim  Constants.nim  Draft.nim  Search.nim
Research/: Referee.nim
contest-2019-06-CEC/: analyze.py  clean.sh  graph.data  graph.p  prepare.sh  run.sh
contest-2019-08-COG/: README.md  analyze.py  clean.sh  graph.data  graph.p  prepare.sh  run.sh
contest-2020-07-CEC/: analyze.py  clean.sh  graph.data  graph.p  prepare.sh  run.sh  setup.sh
contest-2020-07-CEC/Chad/agent/: Cargo.toml
contest-2020-07-CEC/Chad/agent/src/algorithms/: rave_mcts.rs
contest-2020-07-CEC/Chad/agent/src/battle/: utils.rs
contest-2020-07-CEC/Chad/agent/src/draft/: hs_weights.rs  mod.rs
contest-2020-08-COG/: README.md  analyze.py  clean.sh  graph.data  graph.p  out.tar.xz.01  prepare.sh  run.sh  setup.sh
contest-2021-08-COG/: README.md  analyze.py  clean.sh  graph.data  graph.p  graph.sh  prepare.sh  run.sh
contest-2022-08-COG/: README.md  analyze.py  clean.sh  graph.data  graph.p  prepare.sh  run.sh  setup.sh
contest-2022-08-extra/: analyze.py  clean.sh  graph.data  graph.p  prepare.sh  run.sh  setup.sh
docs/: CNAME  cardlist.html  index.html  index2.html  index3.html  rules.html  style.css
paper-activegenes/: Detail.nim  Evolve.nim  detail.sh
paper-evolving-evaluation-functions/: analyze.py  evo1.data  evo1.txt  evo2.data  evo2.txt  evo2a.txt  evo3.txt  evo3a.txt  evo4.txt  evo4a.txt  evolution.ods  graph.data  graph.p  prepare.sh  run-frombest.sh  run-linear-from.sh  run.sh  (+3 more)
(+346 files in other folders)
